fix: loader + scrollbar ui

--- a/web/app/styles/app.css
+++ b/web/app/styles/app.css
@@ -51,3 +51,25 @@ body {
   background-color: rgba(255, 255, 255, 0.2);
   transform: translateY(-2px);
 }
+
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
